--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@next/third-parties": "^14.1.4",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "framer-motion": "^12.24.12",
+    "gsap": "^3.14.2",
     "microcms-js-sdk": "^3.1.0",
     "next": "14.1.4",
     "nextjs-basic-auth-middleware": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.97.2"
   },
   "devDependencies": {
     "@types/node": "^20",
